--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,20 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/styles",
+              "src/assets/fonts"
             ],
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets",
+                "src/assets/styles",
+                "src/assets/styles/core"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
