--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sync-figma-to-tokens": "ts-node-esm -P tsconfig.json src/sync_figma_to_tokens.ts",
     "prepare": "husky install"
   },
+  "type": "module",
   "engines": {
     "node": ">= 20"
   },
