--- a/.github/workflows/sync-figma-to-tokens.yml
+++ b/.github/workflows/sync-figma-to-tokens.yml
@@ -31,8 +31,11 @@ jobs:
       - name: Install Ts-Node
         run: npm install ts-node
 
+      - name: Install Typescript
+        run: npm install typescript
+
       - name: Sync variables in Figma file to tokens
-        run: npm run sync-figma-to-tokens -- --output tokens
+        run: cd projects/figma && npm run sync-figma-to-tokens -- --output tokens
         env:
           FILE_KEY: ${{ github.event.inputs.file_key }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_ACTION_VARIABLES_SYNC_FIGMA_TOKEN }}
