--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ESNext",
+    "module": "ES2022",
     "useDefineForClassFields": false,
+    "types": [
+      "node"
+    ],
     "lib": [
       "ES2022",
       "dom"
