--- a/.github/workflows/sync-figma-to-tokens.yml
+++ b/.github/workflows/sync-figma-to-tokens.yml
@@ -26,13 +26,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install
+        run: cd projects/figma && npm install
 
       - name: Install Ts-Node
-        run: npm install ts-node
+        run: cd projects/figma && npm install ts-node
 
       - name: Install Typescript
-        run: npm install typescript
+        run: cd projects/figma && npm install typescript
 
       - name: Sync variables in Figma file to tokens
         run: cd projects/figma && npm run sync-figma-to-tokens -- --output tokens
