--- a/projects/figma/tsconfig.lib.json
+++ b/projects/figma/tsconfig.lib.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
+    "outDir": "../../src/assets/tokens",
     "declaration": true,
     "esModuleInterop": true,
     "declarationMap": true,
