--- a/projects/figma/tsconfig.lib.json
+++ b/projects/figma/tsconfig.lib.json
@@ -1,22 +1,33 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../src/assets/tokens",
-    "declaration": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "target": "ES2021",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "removeComments": true,
+    "sourceMap": false,
+    "strict": false,
     "esModuleInterop": true,
-    "declarationMap": true,
-    "inlineSources": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "incremental": true,
+    "tsBuildInfoFile": "../dist/tokens/tsbuildinfo",
     "types": [
       "node"
     ]
   },
-  "exclude": [
-    "**/*.spec.ts"
+  "include": [
+    "actions",
+    "bin",
+    "commands",
+    "enums",
+    "lib",
+    "src"
   ],
-  "ts-node": {
-    // Tell ts-node CLI to install the --loader automatically
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-  }
+  "exclude": [
+    "node_modules"
+  ]
 }
