--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,14 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "sourceMap": true,
+    "incremental": true,
+    "sourceMap": false,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "useDefineForClassFields": false,
     "types": [
       "node"
