--- a/.github/workflows/sync-figma-to-tokens.yml
+++ b/.github/workflows/sync-figma-to-tokens.yml
@@ -35,7 +35,7 @@ jobs:
         run: cd projects/figma && npm install typescript
 
       - name: Sync variables in Figma file to tokens
-        run: cd projects/figma && npm run sync-figma-to-tokens
+        run: cd projects/figma && npm run build && node ../../dist/tokens/sync_figma_to_tokens.js
         env:
           FILE_KEY: ${{ github.event.inputs.file_key }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_ACTION_VARIABLES_SYNC_FIGMA_TOKEN }}
