--- a/projects/figma/package.json
+++ b/projects/figma/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs"
+    "build": "rollup -c --bundleConfigAsCjs",
+    "test": "cross-env FILE_KEY=FLKFhTePnjbmIwHR2MrB8t PERSONAL_ACCESS_TOKEN=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 node ../../dist/tokens/sync_figma_to_tokens.js"
   },
   "peerDependencies": {
     "@angular/common": "^17.1.0",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "axios": "^1.6.7",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "glob": "^10.3.10",
     "rollup": "^4.9.6",
