--- a/.github/workflows/sync-figma-to-tokens.yml
+++ b/.github/workflows/sync-figma-to-tokens.yml
@@ -7,7 +7,7 @@ on:
         required: true
 
       personal-access-token:
-        description: 'The file key of the Figma file to be updated'
+        description: 'Figma token'
         required: true
 
 jobs:
