--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/assets/styles",
-              "src/assets/fonts"
+              "src/assets/fonts",
+              "src/assets/media"
             ],
             "styles": [
               "src/styles.scss"
@@ -51,13 +52,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "500mb",
                   "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "20mb",
+                  "maximumError": "4mb"
                 }
               ],
               "outputHashing": "all"
@@ -99,13 +100,19 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/styles",
+              "src/assets/fonts",
+              "src/assets/media"
             ],
             "styles": [
               "src/styles.scss"
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
