--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "deploy": "ng deploy --base-href=Project-Builder-Web"
   },
   "type": "module",
   "engines": {
@@ -46,6 +47,7 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.16",
+    "angular-cli-ghpages": "2.0.0-beta.2",
     "husky": "^9.0.10",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
