--- a/package.json
+++ b/package.json
@@ -7,23 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky install",
-    "deploy": "ng deploy --base-href=Project-Builder-Web"
+    "deploy": "ng deploy --repo=https://github.com/Hyperxq/Project-Builder-Web.git --name=\"Hyperxq\" --email=barrientosd9@gmail.com\n"
   },
   "type": "module",
   "engines": {
     "node": ">= 20"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,js,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
   },
   "private": true,
   "dependencies": {
@@ -46,6 +34,7 @@
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "angular-cli-ghpages": "2.0.0-beta.2",
     "husky": "^9.0.10",
